src/test/ui/block-result/block-must-not-have-result-res.stderr
error[E0308]: mismatched types
  --> $DIR/block-must-not-have-result-res.rs:15:9
   |
14 |     fn drop(&mut self) {
   |                        - expected () because of default return type
15 |         true //~  ERROR mismatched types
   |         ^^^^ expected (), found bool
   |
   = note: expected type `()`
              found type `bool`

error: aborting due to previous error

