src/test/ui/block-result/block-must-not-have-result-res.rs
struct R;

impl Drop for R {
    fn drop(&mut self) {
        true //~  ERROR mismatched types
    }
}

fn main() {
}
